--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">Header</header>
     <div class="realtors">Top 3 realtors</div>
     <section class="features">Features</section>
-    <div class="story__pictures"></div>
+    <div class="story__pictures">Story pictures</div>
     <div class="story__content">Story content</div>
     <section class="homes">Homes</section>
     <section class="gallery">Gallery</section>
