--- a/index.html
+++ b/index.html
@@ -20,7 +20,74 @@
     </div>
     <header class="header">Header</header>
     <div class="realtors">Top 3 realtors</div>
-    <section class="features">Features</section>
+    <section class="features">
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-global"></use>
+          <h4 class="heading-4">World's best luxury homes</h4>
+          <p class="feature__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
+            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
+            temporibus voluptatem voluptates.
+          </p>
+        </svg>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-trophy"></use>
+          <h4 class="heading-4">Only the best properties</h4>
+          <p class="feature__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
+            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
+            temporibus voluptatem voluptates.
+          </p>
+        </svg>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          <h4 class="heading-4">All homes in top locations</h4>
+          <p class="feature__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
+            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
+            temporibus voluptatem voluptates.
+          </p>
+        </svg>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+          <h4 class="heading-4">Only the best properties</h4>
+          <p class="feature__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
+            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
+            temporibus voluptatem voluptates.
+          </p>
+        </svg>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-presentation"></use>
+          <h4 class="heading-4">Top 1% realtors</h4>
+          <p class="feature__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
+            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
+            temporibus voluptatem voluptates.
+          </p>
+        </svg>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-lock"></use>
+          <h4 class="heading-4">Secure payments</h4>
+          <p class="feature__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
+            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
+            temporibus voluptatem voluptates.
+          </p>
+        </svg>
+      </div>
+    </section>
     <div class="story__pictures">Story pictures</div>
     <div class="story__content">Story content</div>
     <section class="homes">Homes</section>
