--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-global"></use>
-          <h4 class="heading-4">World's best luxury homes</h4>
+          <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
           <p class="feature__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
             fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
@@ -35,7 +35,7 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-trophy"></use>
-          <h4 class="heading-4">Only the best properties</h4>
+          <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
           <p class="feature__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
             fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
@@ -46,29 +46,27 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          <h4 class="heading-4">All homes in top locations</h4>
+          <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
           <p class="feature__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
-            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
-            temporibus voluptatem voluptates.
+            fuga fugiat id,
           </p>
         </svg>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-key"></use>
-          <h4 class="heading-4">Only the best properties</h4>
+          <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
           <p class="feature__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
-            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
-            temporibus voluptatem voluptates.
+            fuga fugiat id,
           </p>
         </svg>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-presentation"></use>
-          <h4 class="heading-4">Top 1% realtors</h4>
+          <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
           <p class="feature__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
             fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
@@ -79,11 +77,10 @@
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-lock"></use>
-          <h4 class="heading-4">Secure payments</h4>
+          <h4 class="heading-4 heading-4--dark">Secure payments</h4>
           <p class="feature__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea est
-            fuga fugiat id, inventore ipsum laboriosam nisi odit optio possimus
-            temporibus voluptatem voluptates.
+            fuga fugiat id,
           </p>
         </svg>
       </div>
