--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         </svg>
       </div>
     </section>
-    <div class="story__pictures">Story pictures</div>
+    <div class="story__pictures">
+      <img src="img/story-1.jpeg" alt="img" class="story__img--1" />
+      <img src="img/story-2.jpeg" alt="img" class="story__img--2" />
+    </div>
     <div class="story__content">
       <h3 class="heading-3 mb-sm">Happy Customers</h3>
       <h2 class="heading-2 heading-2--dark mb-md">
