--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </svg>
           <p>$1200000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-2.jpeg" alt="img" class="home__img" />
@@ -165,7 +165,7 @@
           </svg>
           <p>$2750000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-3.jpeg" alt="img" class="home__img" />
@@ -197,7 +197,7 @@
           </svg>
           <p>$850000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-4.jpeg" alt="img" class="home__img" />
@@ -229,7 +229,7 @@
           </svg>
           <p>$1100000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-5.jpeg" alt="img" class="home__img" />
@@ -261,7 +261,7 @@
           </svg>
           <p>$3200000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-6.jpeg" alt="img" class="home__img" />
@@ -293,7 +293,7 @@
           </svg>
           <p>$200000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
     <section class="gallery">Gallery</section>
