--- a/index.html
+++ b/index.html
@@ -296,7 +296,13 @@
         <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
-    <section class="gallery">Gallery</section>
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/gal-1.jpeg" alt="img" class="gallery__img" />
+      </figure>
+
+      <img src="img/gal-2.jpeg" alt="img" class="gallery__img" />
+    </section>
     <footer class="footer">Footer</footer>
   </body>
 </html>
